# gnn_dev

./: .gitignore  README.md  pyproject.toml
dl_engine/: __init__.py  base.py  logging.py  trainer.py
dl_engine/base/: __init__.py  base_callback.py  base_dataloader.py  base_layer.py  base_loss.py  base_trainer.py
dl_engine/callbacks/: __init__.py  base.py  callback_list.py  checkpoint.py  train_logger.py
dl_engine/dataloader/: __init__.py  base.py  sandbox.py
dl_engine/layers/: __init__.py  base.py  conv_classifier.py  gcn.py
dl_engine/layers/base_layers/: __init__.py  arcface.py  conv_block.py  convnorm.py  graph_conv.py
dl_engine/losses/: __init__.py  base.py  crossentropy.py
dl_engine/optimizers/: __init__.py
docker/: Dockerfile  build_docker.sh  docker-compose.yml  entrypoint.sh
gnn/: __init__.py  base.py  base_trainer.py  constants.py  dataloader.py  layers.py  logger.py  logging.py  losses.py  optimizers.py  trainer.py
gnn/callbacks/: __init__.py  checkpoint.py  metrics_logger.py  stdout_logger.py  train_logger.py
gnn/dataloader/: __init__.py  base.py
gnn/layers/: __init__.py  base.py  base_network.py  gcn.py
gnn/layers/base_layers/: arcface.py  convnorm.py  graph_conv.py
gnn/losses/: __init__.py  base.py  binary_crossentropy.py  crossentropy.py
gnn/optimizers/: __init__.py
notebooks/: 20231203_test_graph_convolution.ipynb  20240302_test_pydantic.ipynb  20240428_test_dgl.ipynb  sandbox.ipynb
params/: sample.json
scripts/: run_train.py
tests/: conftest.py
tests/gnn/: test_layers.py
