[tool.poetry]
name = "gnn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gnn"}]

[tool.poetry.dependencies]
python = "^3.9,<=3.11"
networkx = "^3.2.1"
numpy = "^1.26.4"
pandas = "^2.2.1"
scipy = "^1.12.0"
scikit-learn = "^1.4.1.post1"
tensorflow = "^2.15.0.post1"
keras = "^3.0.5"
pydantic = "^2.6.2"
opencv-python = "^4.9.0.80"
pyyaml = "^6.0.1"
# torch, dglはpipでinstallする(versionをきちんと指定しないと動かないので注意する)
# poetry run pip install torch==2.2.1 torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
torch = {version = "2.2.1+cpu", source = "torch"}
torchvision = {version = "2.2.1+cpu", source = "torch"}
torchaudio = {version = "2.2.1+cpu", source = "torch"}
# poetry run pip install pip install  dgl -f https://data.dgl.ai/wheels/repo.html
dgl = "^2.1.0"


[tool.poetry.group.dev.dependencies]
epc = "^0.0.5"
pytest = "^7.4.4"
ipykernel = "^6.29.2"
matplotlib = "^3.8.3"
nbstripout = "^0.7.1"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[[tool.poetry.source]]
name = "dgl"
url = "https://data.dgl.ai/wheels/repo.html"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = ".venv"

[tool.black]
line-length = 105

[tool.isort]
skip = ["gnn"]