[tool.poetry]
name = "dl_engine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dl_engine"}]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
# networkx = "^3.2.1"
pandas = "^2.2.1"
scipy = "^1.12.0"
scikit-learn = "^1.4.1.post1"
#tensorflow = "^2.15.0.post1"
#keras = "^3.0.5"
pydantic = "^2.6.2"
opencv-python = "^4.9.0.80"
# tensorflow = "^2.18.0"

[tool.poetry.group.dev.dependencies]
epc = "^0.0.5"
pytest = "^7.4.4"
ipykernel = "^6.29.2"
matplotlib = "^3.8.3"
nbstripout = "^0.7.1"
flake8 = "^7.1.0"
orjson = "^3.10.14"
sexpdata = "^1.0.2"
six = "^1.17.0"
setuptools = "^75.8.0"
paramiko = "^3.5.0"
rapidfuzz = "^3.11.0"
watchdog = "^6.0.0"
packaging = "^24.2"
black = "^24.10.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.basedpyright]
include = ["dl_engine/**/*.py"]
exclude = ["data", "**/node_modules", "**/__pycache__"]
venvPath = ".venv"
typeCheckingMode = "standard"

[tool.pyright]
venvPath = ".venv"

[tool.black]
line-length = 105

[tool.isort]
skip = ["dl_engine"]